@@ -1,3 +1,6 @@
+02 Sep 2009
+ * Implement TimestampOrNow kattype.
+
 01 Sep 2009
  * Fix bug where AUTO strategy did not set updates on connect.
 
